--- a/templates/index.html
+++ b/templates/index.html
@@ -33,7 +33,7 @@
 <body class="min-h-screen flex items-center justify-center p-6">
     <div class="w-full max-w-2xl glass-morphism p-8 shadow-2xl">
         <div class="text-center mb-8">
-            <img src="anuvad_logo.png" alt="ANUVAD Logo" class="mx-auto mb-4 h-20">
+            <img src="{{ url_for('static', filename='anuvad_logo.png') }}" alt="ANUVAD Logo" class="mx-auto mb-4 h-20">
             <p class="text-xl text-white opacity-80">Smart Translator | Break Language Barriers</p>
         </div>
 
