--- a/templates/index.html
+++ b/templates/index.html
@@ -7,3 +7,4 @@
     <p class="text-lg text-gray-700 mt-2">Current Users: <span id="user-count">Loading...</span></p>
 </div>
 {% endblock %}
+<script src="{{ url_for('static', filename='script.js') }}"></script>
