--- a/templates/learn.html
+++ b/templates/learn.html
@@ -6,3 +6,4 @@
     <p class="text-lg text-gray-700 mt-4">Want to get updates? Stay tuned!</p>
 </div>
 {% endblock %}
+<script src="{{ url_for('static', filename='script.js') }}"></script>
