--- a/templates/voice.html
+++ b/templates/voice.html
@@ -2,7 +2,7 @@
 {% block content %}
 <div class="container mx-auto py-10 flex gap-8">
     <div class="w-1/2 p-4 border rounded-lg">
-        <button class="bg-orange-500 text-white px-4 py-2 rounded-lg">Start Recording</button>
+        <button id="record-btn" class="bg-orange-500 text-white px-4 py-2 rounded-lg">Start Recording</button>
         <p class="mt-4 text-gray-700">Voice translation features are under development.</p>
     </div>
     <div class="w-1/2 p-4 border rounded-lg bg-gray-50">
@@ -10,3 +10,4 @@
     </div>
 </div>
 {% endblock %}
+<script src="{{ url_for('static', filename='script.js') }}"></script>
